tests/TypeValidationTests/data/InvalidExplicitCast.stderr
./data/InvalidExplicitCast.xpl:3:11: error: invalid cast from real to integer
./data/InvalidExplicitCast.xpl:error: input contains errors
