tests/TypeValidationTests/data/InvalidExplicitCast.xpl
node[] main() {
  real x = 0;
  integer y = (integer)x;
}
